--- a/package.json
+++ b/package.json
@@ -37,10 +37,9 @@
     "webpack-cli": "^3.3.9"
   },
   "scripts": {
-    "postinstall": "npm run webpack",
-    "webpack": "webpack",
-    "webpack:dev": "webpack --watch --mode=development",
-    "start:dev": " nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack:dev",
+    "build": "webpack --mode=production",
+    "webpack": "webpack --watch --mode=development",
+    "start:dev": "nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack",
     "start": "node server/index.js"
   },
   "babel": {
