--- a/package.json
+++ b/package.json
@@ -1,19 +1,11 @@
 {
   "name": "grace-shopper-team-a",
   "version": "1.0.0",
-  "description": "",
+  "description": "grace shopper app",
   "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/officiallyakshay/grace-shopper-team-a.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/officiallyakshay/grace-shopper-team-a/issues"
-  },
-  "homepage": "https://github.com/officiallyakshay/grace-shopper-team-a#readme",
   "dependencies": {
     "axios": "^0.19.0",
     "express": "^4.17.1",
