--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "postinstall": "npm run webpack",
-    "webpack": "webpack",
+    "webpack": "webpack --display-error-details",
     "webpack:dev": "webpack --watch --mode=development",
     "start:dev": " nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack:dev",
     "start": "node server/index.js"
