--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "webpack-cli": "^3.3.9"
   },
   "scripts": {
-    "build": "webpack --mode=production",
-    "webpack": "webpack --watch --mode=development",
-    "start:dev": "nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack",
+    "postinstall": "npm run webpack",
+    "webpack": "webpack --display-error-details",
+    "webpack:dev": "webpack --watch --mode=development",
+    "start:dev": " nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack:dev",
     "start": "node server/index.js"
   },
   "babel": {
