--- a/package.json
+++ b/package.json
@@ -30,10 +30,8 @@
   },
   "scripts": {
     "postinstall": "npm run webpack",
-    "webpack": "webpack --display-error-details",
-    "webpack:dev": "webpack --watch --mode=development",
-    "start:dev": " nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack:dev",
-    "start": "node server/index.js"
+    "webpack": "webpack",
+    "start:dev": "nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack --watch --mode=development"
   },
   "babel": {
     "presets": [
