--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "scripts": {
     "postinstall": "npm run webpack",
     "webpack": "webpack --watch --mode=development",
-    "start:dev": "nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack"
+    "start:dev": "nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack",
+    "start": "node server/index.js"
   },
   "babel": {
     "presets": [
