--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "sequelize": "^5.21.1"
+    "sequelize": "^5.21.1",
+    "connect-session-sequelize": "^6.0.0",
+    "passport": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-react": "^7.6.3",
     "babel-loader": "^8.0.6",
-    "connect-session-sequelize": "^6.0.0",
-    "passport": "^0.4.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
   },
   "scripts": {
-    "postinstall": "npm run webpack",
+    "build": "webpack --mode=production",
     "webpack": "webpack --watch --mode=development",
     "start:dev": "nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack",
     "start": "node server/index.js"
