--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "webpack-cli": "^3.3.9"
   },
   "scripts": {
-    "build": "webpack --mode=production",
+    "postinstall": "npm run webpack",
     "webpack": "webpack --watch --mode=development",
     "start:dev": "nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack",
     "start": "node server/index.js"
