--- a/package.json
+++ b/package.json
@@ -8,20 +8,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "connect-session-sequelize": "^6.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "passport": "^0.4.0",
     "pg": "^7.12.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "sequelize": "^5.21.1",
-<<<<<<< HEAD
-    "connect-session-sequelize": "^6.0.0",
-    "passport": "^0.4.0"
-=======
-    "volleyball": "^1.5.1"
->>>>>>> bc7c5858481ebd10402adabf3b76a0a2126b67b1
+    "sequelize": "^5.21.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
