--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-  "name": "grace-shopper-team-a",
+  "name": "grace-shopper-playback",
   "version": "1.0.0",
-  "description": "",
+  "description": "Playback",
   "main": "index.js",
+  "scripts": {
+    "start:dev": "npm run webpack:dev & nodemon ./server/index.js --ignore src/",
+    "webpack": "webpack",
+    "webpack:dev": "npm run webpack -- --watch --mode=development",
+    "start": "node index.js",
+    "build": "npm run webpack"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "axios": "^0.19.0",
-    "connect-session-sequelize": "^6.0.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "passport": "^0.4.0",
-    "pg": "^7.12.1",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "sequelize": "^5.21.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-react": "^7.6.3",
-    "babel-loader": "^8.0.6",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9"
-  },
-  "scripts": {
-    "postinstall": "npm run webpack",
-    "webpack": "webpack --watch --mode=development",
-    "start:dev": "nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack",
-    "start": "node server/index.js"
-  },
   "babel": {
     "presets": [
       "@babel/react"
     ]
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "pg": "^7.12.1",
+    "sequelize": "^5.21.2",
+    "stripe": "^7.11.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-react": "^7.6.3",
+    "axios": "^0.19.0",
+    "babel-loader": "^8.0.6",
+    "nodemon": "^1.19.4",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   }
 }
