--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "npm run webpack:dev & nodemon ./server/index.js --ignore src/",
     "webpack": "webpack --mode=production",
     "webpack:dev": "npm run webpack -- --watch --mode=development",
-    "start": "node index.js",
+    "start": "node server/index.js",
     "build": "npm run webpack"
   },
   "keywords": [],
@@ -23,7 +23,9 @@
     "express-session": "^1.17.0",
     "pg": "^7.12.1",
     "sequelize": "^5.21.2",
-    "stripe": "^7.11.0"
+    "stripe": "^7.11.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -36,8 +38,6 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9"
+    "redux-thunk": "^2.3.0"
   }
 }
