--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "npm run webpack:dev & nodemon ./server/index.js --ignore src/",
     "webpack": "webpack --mode=production",
     "webpack:dev": "npm run webpack -- --watch --mode=development",
-    "start": "node server/index.js",
+    "start": "npm run build node server/index.js",
     "build": "npm run webpack"
   },
   "keywords": [],
