--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Playback",
   "main": "index.js",
   "scripts": {
+    "postinstall": "npm run webpack",
     "start:dev": "npm run webpack:dev & nodemon ./server/index.js --ignore src/",
-    "webpack": "webpack --mode=production",
+    "webpack": "webpack -p",
     "webpack:dev": "npm run webpack -- --watch --mode=development",
-    "start": "npm run build node server/index.js",
-    "build": "npm run webpack"
+    "start": "npm run webpack &node server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +19,10 @@
     ]
   },
   "dependencies": {
+    "connect-session-sequelize": "^6.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "passport": "^0.4.0",
     "pg": "^7.12.1",
     "sequelize": "^5.21.2",
     "stripe": "^7.11.0",
