--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "babel": {
     "presets": [
-      "@babel/react"
+      "@babel/react",
+      "@babel/env"
     ]
   },
   "dependencies": {
@@ -31,6 +32,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.6.3",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
