--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "description": "Playback",
   "main": "index.js",
   "scripts": {
-    "postinstall": "npm run webpack",
-    "start:dev": "npm run webpack:dev & nodemon ./server/index.js --ignore src/",
-    "webpack": "webpack -p",
-    "webpack:dev": "npm run webpack -- --watch --mode=development",
-    "start": "npm run webpack &node server/index.js"
+    "build": "webpack --mode=production",
+    "webpack": "webpack --watch --mode=development",
+    "start:dev": "nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack",
+    "start": "node server/index.js"
   },
   "keywords": [],
   "author": "",
