--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "Playback",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=production",
+    "postinstall": "npm run webpack",
     "webpack": "webpack --watch --mode=development",
     "start:dev": "nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack",
     "start": "node server/index.js"
