--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grace-shopper-playback",
   "version": "1.0.0",
   "engines": {
-    "node" : "10.10.0"
+    "node": "10.10.0"
   },
   "description": "Playback",
   "main": "index.js",
@@ -17,8 +17,7 @@
   "license": "ISC",
   "babel": {
     "presets": [
-      "@babel/react",
-      "@babel/env"
+      "@babel/react"
     ]
   },
   "dependencies": {
@@ -34,8 +33,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
-    "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.6.3",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
@@ -46,5 +43,13 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gudishr/grace-shopper-team-a.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gudishr/grace-shopper-team-a/issues"
+  },
+  "homepage": "https://github.com/gudishr/grace-shopper-team-a#readme"
 }
