--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "description": "Playback",
   "main": "index.js",
   "scripts": {
-    "postinstall": "npm run webpack",
-    "webpack": "webpack --watch --mode=development --display-error-details",
+    "webpack": "webpack --mode=production",
     "start:dev": "nodemon server/index.js --ignore dist/ --ignore src/ & npm run webpack",
-    "start": "node server/index.js"
+    "start": "npm run webpack &node server/index.js"
   },
   "keywords": [],
   "author": "",
