--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "babel": {
     "presets": [
-      "@babel/react"
+      "@babel/preset-react"
     ]
   },
   "dependencies": {
