--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,8 @@ typings/
 # next.js build output
 .next
 
+#DS Store -- automatic desktop service store
+.DS_Store
+
 /dist/main.js
 /dist/main.js.map
