--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,5 @@ typings/
 #DS Store -- automatic desktop service store
 .DS_Store
 
-/dist/main.js
-/dist/main.js.map
+# /dist/main.js
+# /dist/main.js.map
